# PoisonedRAG

./: README.md  evaluate_beir.py  gen_adv.py  main.py  pyproject.toml  refactor_repo.py  requirements.txt  streamlit_app.py
dashboard/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
dashboard/backend/: .gitignore  main.py
dashboard/backend/api/: models.py  routes.py
dashboard/backend/core/: attack_engine.py  cache_db.py  defense_simulator.py  metric_calculator.py  paper_data.py
dashboard/frontend/: package-lock.json  package.json  tailwind.config.ts
dashboard/frontend/app/: globals.css  layout.tsx  page.tsx
dashboard/frontend/components/: AttackPipeline.tsx  BaselineChart.tsx  CaseStudyCard.tsx  Controls.tsx  DefenseToggle.tsx  MetricsPanel.tsx  RAGFlowChart.tsx
dashboard/frontend/hooks/: useAttackData.ts
dashboard/scripts/: seed_cache.py  setup_env.py
src/rag_simulator/: __init__.py  attack.py  engine.py  utils.py
